--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -26,11 +26,14 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.3.0",
+    "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^10.3.0",
     "axios": "^1.6.5",
+    "pg": "^8.11.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "socket.io": "^4.7.4"
+    "socket.io": "^4.7.4",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
