--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -30,6 +30,8 @@
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^10.3.0",
     "axios": "^1.6.5",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "pg": "^8.11.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
